force-app/main/default/objects/Account/fields/Last_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Check__c</fullName>
    <description>Date of the most recent customer health check.</description>
    <label>Last Health Check</label>
    <type>Date</type>
</CustomField>