force-app/main/default/objects/Account/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <description>Date when account onboarding was officially completed.</description>
    <inlineHelpText>Date when account onboarding was officially completed.</inlineHelpText>
    <label>Onboarding Date</label>
    <type>Date</type>
</CustomField>