force-app/main/default/objects/Account/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <description>Identified primary competitor associated with the account.</description>
    <label>Primary Competitor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>