force-app/main/default/objects/Account/fields/Renewal_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Risk_Score__c</fullName>
    <description>Risk score assessing likelihood of non-renewal (range: 0-100).</description>
    <label>Renewal Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>