force-app/main/default/objects/Account/fields/Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>Service_Tier__c</fullName>
    <description>Customer service level tier (Standard, Silver, Gold, Platinum).</description>
    <inlineHelpText>Customer service level tier.</inlineHelpText>
    <label>Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>