force-app/main/default/objects/Account/validationRules/Primary_Competitor_Required_High_Risk.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Competitor_Required_High_Risk</fullName>
    <active>true</active>
    <description>Requires Primary Competitor to be populated if Renewal Risk Score is greater than 80.</description>
    <errorConditionFormula>AND(
    Renewal_Risk_Score__c &gt; 80,
    ISBLANK(Primary_Competitor__c)
)</errorConditionFormula>
    <errorDisplayField>Primary_Competitor__c</errorDisplayField>
    <errorMessage>Primary Competitor is required when Renewal Risk Score is greater than 80.</errorMessage>
</ValidationRule>